--- a/Nobel_Prize_Analysis_(start).ipynb
+++ b/Nobel_Prize_Analysis_(start).ipynb
@@ -1206,7 +1206,9 @@
       "metadata": {
         "id": "Q5jBv1lUo7Lq"
       },
-      "source": []
+      "source": [
+        "We can see that a majority of nobel laureates are male. However, in more recent years this trend may be changing as I suspect that the gap between male and female laureates were greater closer to the inception of the prize. "
+      ]
     },
     {
       "cell_type": "code",
@@ -1561,8 +1563,7 @@
       },
       "source": [
         "# Find the Repeat Winners\n",
-        "\n",
-        "**Challenge**: Did some people get a Nobel Prize more than once? If so, who were they? "
+        "\n"
       ]
     },
     {
@@ -2460,7 +2461,8 @@
       },
       "source": [
         "# Number of Prizes per Category\n",
-        "\n"
+        "\n",
+        "This is to be expected as the economic prize was not added until the 1960s. "
       ]
     },
     {
@@ -2553,7 +2555,8 @@
       },
       "source": [
         "# Male and Female Winners by Category\n",
-        "\n"
+        "\n",
+        "Females tend to be slightly more represented in the non-hard science categories, besides economics. This is likely due to societal education standards. "
       ]
     },
     {
@@ -2782,7 +2785,8 @@
         "id": "CpHaV-ZDo7MD"
       },
       "source": [
-        "# Number of Prizes Awarded Over Time\n"
+        "# Number of Prizes Awarded Over Time\n",
+        "We can see a gradual increase in the number of prizes being given out each year. There is a big uptick in the early 70s as the first economics prizes were just being handed out. "
       ]
     },
     {
@@ -2959,7 +2963,7 @@
       },
       "source": [
         "# Are More Prizes Shared Than Before?\n",
-        "\n"
+        "As prizes become more common. It's individual value decreases. Although the monetary prize is likely not the motivating factor for its recipients it could be worth increasing the prize share. \n"
       ]
     },
     {
@@ -3156,7 +3160,9 @@
         "id": "L32lWu0Oo7MM"
       },
       "source": [
-        "# The Countries with the Most Nobel Prizes"
+        "# The Countries with the Most Nobel Prizes\n",
+        "\n",
+        "The United States dominates with more than double the amount of the United Kingdom, the country with the second most prizes. With the United States large population and home for many of the world's most prestigious Unversities, this isn't a great surprise. "
       ]
     },
     {
@@ -3538,7 +3544,10 @@
       },
       "source": [
         "# In Which Categories are the Different Countries Winning Prizes? \n",
-        "\n"
+        "There are several interesting trends we can take away from this graph. \n",
+        "- Despite Economics being a relatively new prize the USA has a relatively large share of their prizes belonging to that category compared to other countries\n",
+        "- Germany and Japan are heavily dedicated to the hard sciences of Physics and Chemistry with a majority of their prizes belonging to those domains\n",
+        "- France is very well rounded and has a higher share of literature prizes than most other countries, (as does Italy)\n"
       ]
     },
     {
@@ -3844,7 +3853,11 @@
         "id": "Ic-LN14bo7Mb"
       },
       "source": [
-        "### Number of Prizes Won by Each Country Over Time\n"
+        "### Number of Prizes Won by Each Country Over Time\n",
+        "- Germany and the UK dominated the nobel prize scene until the mid 1940's. This was when the USA truly became a dominant superpower, post WWII and skyrocketed to the top of the chart. \n",
+        "- Russia may be underrepresented having been a world superpower for decades and having a large population, yet they are merely 8th on the list. This could be due to worse education or perhaps a more euro/western centric bias (china is 15th, Japan is 7th) \n",
+        "Russia also has not won a prize since around 2010\n",
+        "- Japan has recently begun to win more prizes, starting around 2010"
       ]
     },
     {
@@ -6437,26 +6450,8 @@
       "source": [
         "### Descriptive Statistics for the Laureate Age at Time of Award\n",
         "\n",
-        "  "
+        "The median age of a nobel prize winner seems to be around 60 years old.   "
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6vlp5S0WGO98"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "P6cAIrB5GO24"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -6498,7 +6493,8 @@
       },
       "source": [
         "### Age at Time of Award throughout History\n",
-        "\n"
+        "\n",
+        "The average age of a nobel winner is getting older. This makes sense as lifespans are increasing and it takes more and more years of research to make meaningful discoveries in the hard sciences. "
       ]
     },
     {
@@ -6558,7 +6554,14 @@
         "id": "CPFMftF9o7M5"
       },
       "source": [
-        "### Winning Age Across the Nobel Prize Categories\n"
+        "### Winning Age Across the Nobel Prize Categories\n",
+        "Notably, economics has the oldest average nobel prize winners, this is most likely due to the fact that economic theory may take decades to be validated and experience may be more important. This can be seen in the literature category as well. \n",
+        "\n",
+        "The hard sciences seem to favor younger candidates. This could be due to the intensity of research these subjects demand. \n",
+        "\n",
+        "The peace prize has two outliers as it is one of the categories that doesn't necessarily require years of research to hone ones craft.\n",
+        "\n",
+        "The winners of every category are winning at older and older ages besides the peace category. This could be due to the fact that the world is becoming more globalized and younger generations are more easily capable of gaining attention on political stages. "
       ]
     },
     {
