--- a/Nobel_Prize_Analysis_(start).ipynb
+++ b/Nobel_Prize_Analysis_(start).ipynb
@@ -3248,15 +3248,8 @@
         "id": "uNTvKsrzo7MR"
       },
       "source": [
-        "# Use a Choropleth Map to Show the Number of Prizes Won by Country\n",
-        "\n",
-        "* Create this choropleth map using [the plotly documentation](https://plotly.com/python/choropleth-maps/):\n",
-        "\n",
-        "<img src=https://i.imgur.com/s4lqYZH.png>\n",
-        "\n",
-        "* Experiment with [plotly's available colours](https://plotly.com/python/builtin-colorscales/). I quite like the sequential colour `matter` on this map. \n",
-        "\n",
-        "Hint: You'll need to use a 3 letter country code for each country. \n"
+        "# Number of Prizes Won by Country\n",
+        " \n"
       ]
     },
     {
